# ralph-spike-2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  pyproject.toml
.github/workflows/: ci.yml
.ralph/: config.yaml
.ralph/docker/: Dockerfile  entrypoint.sh
.ralph/prompts/: build.md  plan.md
docker/: Dockerfile  entrypoint.sh  loop.sh
logs/: 20260207-095027.jsonl  20260207-095329.jsonl  20260207-095543.jsonl  20260207-100207.jsonl  20260207-100514.jsonl  20260207-101725.jsonl  20260207-102004.jsonl  20260207-102347.jsonl  20260207-102858.jsonl  20260207-104227.jsonl  20260207-105107.jsonl  20260207-105804.jsonl  20260207-110411.jsonl  20260207-110850.jsonl
specs/: create-todo.md  data-model.md  delete-todo.md  error-handling.md  list-filtering-sorting-pagination.md  logging.md  retrieve-todos.md  update-todo.md
src/ralf_spike_2/: __init__.py  app.py  database.py  errors.py  logging_middleware.py  main.py  models.py  routes.py  schemas.py
tests/: conftest.py  test_app.py  test_complete_incomplete.py  test_convenience.py  test_create_todo.py  test_database.py  test_delete_todo.py  test_error_handler_integration.py  test_error_handling.py  test_errors.py  test_filtering_sorting_pagination.py  test_list_filtering.py  test_list_filtering_sorting_pagination.py  test_list_query.py  test_logging.py  test_models.py  test_patch_todo.py  test_ralf_spike_2.py  test_retrieve_todo.py  test_retrieve_todos.py  test_schemas.py  test_todos.py  test_update_todo.py  test_update_todo_patch.py  test_update_todo_put.py
